--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: sre-microservice-service
 spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 5000
   selector:
     app: sre-microservice
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer
